--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ button:hover span{
 .back-video{
   position: absolute;
   right: 0;
-  bottom: 625px;
+  bottom: 85%;
   display: flex;
   z-index: -1;
 }
@@ -167,6 +167,17 @@ button:hover span{
   }
 }
 @media (max-aspect-ratio: 16/9){
+  .back-video{
+    width: auto;
+    height: 100%;
+  }
+@media (min-aspect-ratio: 9/16){
+  .back-video{
+    width: 100%;
+    height: auto;
+  }
+}
+@media (max-aspect-ratio: 9/16){
   .back-video{
     width: auto;
     height: 100%;
