--- a/style.css
+++ b/style.css
@@ -37,17 +37,17 @@ nav{
 nav ul li{
   list-style: none;
   display: inline-block;
-  margin-right: 30px;
+  margin-right: 15px;
   position: relative;
 }
 nav ul li a{
   text-decoration: none;
   color: #000;
-  font-size: 14px;
+  font-size: 13px;
 }
 nav ul li a:hover{
   color: #fff;
-  font-size: 14px;
+  font-size: 13px;
 }
 nav ul li a::after{
   content: "";
@@ -133,7 +133,7 @@ button:hover span{
   align-items: center;
 }
 .controller{
-  width: 80%;
+  width:400px;
 }
 
 .social-links img{
@@ -152,11 +152,14 @@ button:hover span{
     overflow: hidden;
     transition: 2s;
   }
+  .controller{
+    overflow: hidden;
+  }
 }
 .back-video{
   position: absolute;
   right: 0;
-  bottom: 85%;
+  bottom: 84%;
   display: flex;
   z-index: -1;
 }
@@ -177,10 +180,18 @@ button:hover span{
     width: 100%;
     height: auto;
   }
+  .controller{
+    padding: 0 12%;
+    height: auto;
+  }
 }
 @media (max-aspect-ratio: 9/16){
   .back-video{
     width: auto;
     height: 100%;
+  }
+  .controller{
+    padding: 0 12%;
+    height: auto;
   }
 }
