--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
     font-family: sans-serif;
   }
 body{
+  background-image:url("Immagini/particle effect.gif");
     width: 100%;
     height: 300px;
-    background: linear-gradient(45deg, #000, #696969,#808080, #d3d3d3, #f5f5f5, #808080, #696969, #000);
+    background: linear-gradient(45deg, #000,#000, #696969, #808080, #dcdcdc, #696969, #000, #000);
     background-size: 400% 400%;
     animation: gradientAnimation 23s ease infinite;
   }
@@ -28,12 +29,12 @@ body{
 .global h1{
     font-weight: 2500;
     font-size: 50px;
-    color: #000;
+    color: #f5f5f5;
     margin: 20px 0 10px;
 }
 .global h3{
     font-size: 20px;
-    color: #dcdcdc;
+    color: #d3d3d3;
     font-weight: 300;
     margin: 20px 0 10px;
 }
@@ -51,11 +52,15 @@ body{
     position: relative;
     margin-top: 10px;
     margin-bottom: 10px;
-    background: linear-gradient(45deg, #d3d3d3, #f5f5f5, #fff);
+    background: none;
     border-radius: 10px;
     padding: 10px;
     border: 2px solid #f5f5f5;
     box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+    transition: 1s;
+}
+.col-1 li:hover{
+  background: #d3d3d3;
 }
 .logo{
     max-width: 100%;
@@ -80,10 +85,18 @@ body{
     transition: 2s;
 }
 .social-links img:hover{
-    background: #000;
+    background: #a9a9a9;
 }
 .social-links{
     display: flex;
     justify-content:center;
     align-items: center;
+  }
+  .gif{
+    opacity: 0.1;
+    width: 150%;
+    height: 150%;
+    position:fixed;
+    transform: rotate(27deg);
+    z-index: -1;
   }
