--- a/styles.css
+++ b/styles.css
@@ -92,11 +92,119 @@ body{
     justify-content:center;
     align-items: center;
   }
-  .gif{
-    opacity: 0.1;
-    width: 150%;
-    height: 150%;
-    position:fixed;
-    transform: rotate(27deg);
+  #video-background {
+    opacity: 0.35;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
     z-index: -1;
   }
+  @property --progress-value {
+    syntax: '<integer>';
+    inherits: false;
+    initial-value: 0;
+  }
+  
+  @keyframes html-progress {
+    to { --progress-value: 92; }
+  }
+  
+  @keyframes css-progress {
+    to { --progress-value: 60; }
+  }
+  
+  @keyframes js-progress {
+    to { --progress-value: 80; }
+  }
+  
+  .progress-bar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    
+    /* to center the percentage value */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .progress-bar::before {
+    counter-reset: percentage var(--progress-value);
+    content: counter(percentage) '%';
+  }
+  
+  .html {
+    background: 
+      radial-gradient(closest-side, LightGray 79%, transparent 80% 100%),
+      conic-gradient(black calc(var(--progress-value) * 1%), transparent 0);
+    animation: html-progress 2s 1 forwards;
+  }
+  
+  .html::before {
+    animation: html-progress 2s 1 forwards;
+  }
+  
+  .css {
+    background: 
+      radial-gradient(closest-side, LightGray 79%, transparent 80% 100%, transparent 0),
+      conic-gradient(black calc(var(--progress-value) * 1%), transparent 0);
+    animation: css-progress 2s 1 forwards;
+  }
+  
+  .css::before {
+    animation: css-progress 2s 1 forwards;
+  }
+  
+  .js {
+    background: 
+      radial-gradient(closest-side, LightGray 79%, transparent 80% 100%, transparent 0),
+      conic-gradient(black calc(var(--progress-value) * 1%), transparent 0);
+    animation: js-progress 2s 1 forwards;
+  }
+  .js::before {
+    animation: js-progress 2s 1 forwards;
+  }
+  progress {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+  }
+  .col-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.progress-bars-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; /* Per gestire il wrapping degli elementi */
+  max-width: 400px;
+}
+
+.progress-bar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: flex;
+  padding: 5px, 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.progress-bar progress {
+  margin-bottom: 10px; /* Aggiunge spazio tra la barra di progresso e l'h2 */
+}
+
+.progress-bar h2 {
+  margin: 0;
+  text-align: center;
+  font-size: 14px;
+  color: #333; /* Cambia colore se necessario */
+}
