--- a/styles.css
+++ b/styles.css
@@ -492,3 +492,91 @@ h1 {
 .button-expanded .Projects {
   max-height: 500px; 
 }
+
+@media only screen and (max-width: 793px) {
+  body {
+      height: auto;
+      overflow: auto;
+      background-size: 100% 100%;
+      animation: none;
+  }
+
+  .front-row {
+      margin-top: 100px;
+  }
+
+  .logo {
+      margin-top: 100px;
+      width: 80px;
+      margin-bottom: 30px;
+  }
+
+  .titolo {
+      left: 20px;
+  }
+
+  .navbar {
+      right: 20px;
+  }
+
+  .progress-bars-container {
+      margin-left: 20px;
+  }
+
+  .elements {
+      margin-top: 100px;
+      padding: 20px;
+  }
+
+  .html-bar,
+  .css-bar,
+  .js-bar,
+  .php-bar,
+  .mySQL-bar,
+  .Godot-bar,
+  .UE-bar,
+  .Blender-bar {
+      width: 100%;
+      margin-top: 10px;
+  }
+
+  .html,
+  .css,
+  .js,
+  .php,
+  .mySQL,
+  .Godot,
+  .UE,
+  .Blender {
+      width: 100%;
+  }
+
+  .Projects img {
+      width: 100px;
+      height: 100px;
+  }
+
+  .fade-in-left {
+      animation: none;
+      opacity: 1;
+  }
+
+  .Projects li {
+      margin-bottom: 20px;
+  }
+
+  .button-expanded .Projects {
+      max-height: none;
+  }
+
+
+.progress-bar {
+    margin-bottom: 20px; /* Adjust spacing between progress bars */
+    width: 80px;
+    height: 80px; /* Adjust the width of the progress bars */
+}
+
+.progress-bar h2 {
+    font-size: 10px; /* Adjust font size for progress bar headings */
+}
+}
