--- a/styles.css
+++ b/styles.css
@@ -507,16 +507,18 @@ h1 {
 
   .logo {
       margin-top: 100px;
-      width: 80px;
+      width: 150px;
       margin-bottom: 30px;
   }
 
   .titolo {
       left: 20px;
+      font-size: 30px;
   }
 
   .navbar {
       right: 20px;
+      font-size: 10px;
   }
 
   .progress-bars-container {
@@ -571,12 +573,13 @@ h1 {
 
 
 .progress-bar {
-    margin-bottom: 20px; /* Adjust spacing between progress bars */
+    margin-bottom: 20px; 
     width: 80px;
-    height: 80px; /* Adjust the width of the progress bars */
+    height: 80px;
+    margin: 5px;
 }
 
 .progress-bar h2 {
-    font-size: 10px; /* Adjust font size for progress bar headings */
+    font-size: 10px; 
 }
 }
