--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -568,42 +568,79 @@ nav ul {
 .custom-button-expanded .card {
   max-height: 500px; 
 }
-@media only screen and (max-width: 793px) {
+@media only screen and (max-width: 768px) {
   body {
-      height: auto;
-      overflow: auto;
-      background-size: 100% 100%;
-      animation: none;
+      font-size: 14px;
   }
 
   .front-row {
-      margin-top: 100px;
+      flex-direction: column;
+      align-items: center;
   }
-
+  .progress-bar{
+    margin-top: 50px;
+    margin-right: 40px;
+    width: 100px;
+    height: 100px;
+    padding: 5px, 5px;
+  }
   .logo {
-      margin-top: 100px;
-      width: 150px;
-      margin-bottom: 30px;
+      margin-top: 50px; 
+      width: 200px; 
   }
 
   .titolo {
-      font-size: 30px;
+      font-size: 40px; 
+      top: 30px; 
+      padding: 10px; 
   }
 
   .custom-navbar {
-      font-size: 10px;
+      height: auto;
+  }
+
+  nav ul {
+      margin: 0;
+  }
+
+  .custom-navbar ul li {
+      margin: 0;
+  }
+
+  .custom-navbar ul li a {
+      padding: 8px; 
   }
 
   .progress-bars-container {
-      margin-left: 20px;
-      justify-content: center;
+      margin: 20px 10px; 
+  }
+
+  .progress-bar {
+      margin-right: 0; 
   }
 
   .elements {
-      margin-top: 100px;
-      padding: 20px;
+      margin-top: 100px; 
+      padding: 20px; 
   }
 
+  .custom-button {
+      width: 150px; 
+  }
+
+  .html, .css, .js, .php, .mySQL, .Godot, .UE, .Blender {
+      width: 100%; 
+  }
+
+  .cards {
+      flex-direction: column; 
+  }
+
+
+  .didascalia {
+      width: 100%; 
+      text-align: center; 
+  }
   .html-bar,
   .css-bar,
   .js-bar,
@@ -641,36 +678,5 @@ nav ul {
   .Blender {
   width: 40%;
   }
-
-  .Projects img {
-      width: 100px;
-      height: 100px;
-  }
-
-  .fade-in-left {
-      animation: none;
-      opacity: 1;
-  }
-
-  .Projects li {
-      margin-bottom: 20px;
-  }
-
-  .custom-button-expanded .Projects {
-      max-height: none;
-  }
-
-
-.progress-bar {
-    margin-bottom: 20px; 
-    width: 80px;
-    height: 80px;
-    margin: 5px;
-}
-
-.progress-bar h2 {
-    font-size: 10px; 
-}
-
 
 }
