--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 body{
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: gainsboro;
-  background: linear-gradient(45deg, white, darkgray, gainsboro)
+  background: linear-gradient(45deg, white, darkgray, gainsboro);
 }
 
 
 
   
 .landingPage{
-  margin-top: 100px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,16 +16,13 @@ body{
 }
 
 .titolo{
+  font-size:60px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .foto{
-  margin-right: 60px;
   height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 80%;
   background-image: linear-gradient(45deg, grey, darkgray, gainsboro);
   padding: 5px;
@@ -35,8 +32,18 @@ body{
   justify-content: center;
   align-items: center;
   margin-top: 0; 
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 200px;
+}
+.aboutMe{
+margin-left: 0;
+margin-right: 150px;
+}
+.aboutMe h2{
+  padding: 20px;
+}
+.aboutMe p{
+  text-align: justify;
 }
 
 .animated-text {
@@ -169,6 +176,7 @@ nav ul {
 
 .projects{
   padding-left: 40px;
+  margin-top: 50px;
 }
 .container {
   margin-top: 50px;
@@ -211,4 +219,132 @@ nav ul {
 
 .item:hover .overlay {
   opacity: 1;
+}
+
+.description {
+  margin-left: 100px;
+  border-radius: 30px;
+  background: linear-gradient(30deg, whitesmoke, rgb(218, 218, 218), gainsboro);
+  width: 50%;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 100px;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.description.left {
+  margin-right: 200px;
+  align-items: flex-start;
+  text-align: left;
+}
+
+.description.right {
+  margin-left: 580px;
+  align-items: flex-end;
+  text-align: right;
+}
+
+.description.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.description h2 {
+  margin-bottom: 10px;
+}
+
+.description p, .description ul {
+  margin-top: 10px;
+  max-width: 600px;
+}
+
+.title {
+  transition-delay: 0.3s;
+}
+
+.paragraph {
+  transition-delay: 0.6s;
+}
+
+
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.title {
+  transition-delay: 0.3s;
+}
+
+.paragraph {
+  transition-delay: 0.6s;
+}
+
+
+@media (min-width: 1024px) {
+  .landingPage {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .landingPage {
+    margin-top: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .landingPage {
+    margin-top: 60px;
+  }
+  .col {
+    margin: 0 50px;
+    font-size: 20px;
+  }
+  .foto {
+    height: 150px;
+  }
+  .item img {
+    width: 250px;
+  }
+  .description {
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 80%;
+  }
+  .description.left {
+    margin-right: 0;
+  }
+  .description.right {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .landingPage {
+    margin-top: 40px;
+  }
+  .foto {
+    height: 120px;
+  }
+  .item img {
+    width: 200px;
+  }
+  .description {
+    padding: 20px;
+    width: 90%;
+  }
+  .description.left, .description.right {
+    margin: 0;
+  }
 }
