--- a/src/App.css
+++ b/src/App.css
@@ -1,338 +1,540 @@
-body{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: gainsboro;
-  background: linear-gradient(45deg, white, darkgray, gainsboro);
-}
-
-
-
-  
-.landingPage{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.titolo{
-  margin-top: 50px;
-  font-size:60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  animation: entrance 1s ease-in-out forwards;
-}
-.foto{
-  margin-top: 50px;
-  height: 200px;
-  border-radius: 80%;
-  background-image: linear-gradient(45deg, grey, darkgray, gainsboro);
-  padding: 5px;
-  animation: entrance 1s ease-in-out forwards;
-}
-
-@keyframes entrance {
-  from {
-    opacity: 0;
-    transform: translateY(-30px); 
-}
-to {
-    opacity: 1;
-    transform: translateY(0); 
-}
-}
-.content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0; 
-  margin-top: 50px;
-  margin-bottom: 200px;
-}
-.aboutMe{
-margin-left: 0;
-margin-right: 150px;
-animation: entrance 2s ease-in-out forwards;
-
-}
-.aboutMe h2{
-  padding: 10px;
-}
-.aboutMe p{
-  text-align: justify;
-}
-
-.animated-text {
-  overflow: hidden;
-  border-right: .15em solid black; 
-  white-space: nowrap; 
+* {
   margin: 0;
-  animation: typing 2s steps(40, end), blink-caret .75s step-end infinite;
-}
-.bouncing-text {
-  animation: bounceIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards, stretch 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s forwards infinite, float 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s forwards infinite;
-}
-@keyframes float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-15px);
-  }
-  100% {
-    transform: translateY(5);
-  }
+  padding: 0;
+  box-sizing: border-box;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-@keyframes bounceIn {
-  0% {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-  60% {
-    transform: translateY(30%);
-  }
-  80% {
-    transform: translateY(-10%);
-  }
-  100% {
-    transform: translateY(0%);
-    opacity: 1;
-  }
+.app-container {
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+}
+.robot {
+  position: absolute;
+}
+.pages-container {
+  height: 100vh;
+  will-change: transform;
+}
+.name {
+  font-size: 200px;
+  color: white;
+  width: 400%;
+}
+.page {
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+.container-title {
+  padding-left: 8px;
+  position: absolute;
+  pointer-events: none;
+}
+.first-page {
+  background-color: gainsboro;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.animated-title {
+  opacity: 0;
+  transform: translateY(50px);
+  animation: fadeInFromBottom 1s ease-out forwards;
+  margin: 0;
+}
+.animated-text {
+  opacity: 0;
+  transform: translateX(-50px);
+  animation: fadeInFromLeft 1s ease-out forwards;
+  margin: 10px;
+  padding-left: 20px;
 }
 
-@keyframes stretch {
-  0% {
-    transform: scaleX(0);
-  }
-  50% {
-    transform: scaleX(1.1);
-  }
-  100% {
-    transform: scaleX(1);
-  }
+.first-text {
+  animation-delay: 1s;
 }
-@keyframes typing {
+.second-text {
+  animation-delay: 2s;
+}
+@keyframes fadeInFromLeft {
   from {
-    width: 0;
+    opacity: 0;
+    transform: translateX(-50px);
   }
   to {
-    width: 100%;
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeInFromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
-@keyframes blink-caret {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: black;
-  }
-}
-@keyframes underline {
-  0% {
-    text-decoration: none; 
-  }
-  100% {
-    text-decoration: underline; 
-  }
-}
-.col {
-  margin: 0 150px;
-  font-size: 30px;
-  color: whitesmoke;
-}
-
-.custom-navbar {
-  position: fixed;
-  top: 0;  
-  z-index: 9999;
-  background: black;
-  width: 100%;
+.footer-bar {
+  pointer-events: none;
   display: flex;
-  justify-content: center;
-}
-
-
-nav ul {
-    margin-right: 30px;
-    list-style: none;
-    display: flex;
-}
-
-.custom-navbar ul li {
-    margin-left: 30px;
-    position: relative;
-}
-
-.custom-navbar ul li a {
+  align-items: center;
+  flex-direction: column;
+  justify-content: end;
+  text-align: center;
+  color: dimgray;
   width: 100%;
-    align-items: center;
-    padding: 10px;
-    text-decoration: none;
-    color: #ffff;
-    font-weight: bold;
-    position: relative; 
-}
-
-.custom-navbar ul li::after {
-    content: '';
-    width: 0;
-    height: 1px;
-    background: darkgray;
-    left: 0;
-    position: absolute;
-    bottom: -5px;
-    transition: width 0.7s; 
-}
-
-.custom-navbar ul li:hover::after {
-    width: 100%;
-}
-
-.projects{
-  border-top-right-radius: 40px;
-  border-top-left-radius: 40px;
-  box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.2);
-  height: 100%;
-  padding-top: 10px;
-  padding-bottom: 300px;
-  background: linear-gradient(180deg, whitesmoke, gainsboro, darkgray, #333);
-  padding-left: 40px;
-  margin-top: 50px;
-}
-.container {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  display: flex;
-  overflow-x: scroll;
-  padding: 10px;
-  gap: 50px;
-  overflow-y: hidden;
-  /* scrollbar-width: none; 
-  -ms-overflow-style: none;  */
-  scrollbar-width: thin;
-  scrollbar-color: black gainsboro; 
-}
-
-
-.item {
-  position: relative;
-  display: inline-block;
-  transition: 0.3s ease;
-}
-.item:hover{
-  transform: scale(1.2);
-}
-.item img {
-  border: 1px solid darkgray;
-  display: block;
-  width: 300px; 
-  height: 200px;
-}
-
-.overlay {
+  height: 20%;
+  padding: 8px;
+  background: linear-gradient(180deg, transparent, #f0f0f0, #f3f8ff);
   position: absolute;
   bottom: 0;
   left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  text-align: justify;
-  padding: 20px;
-  padding-left: 30px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  font-size: 10px;
+}
+.second-page {
+  background-color: #f3f8ff;
+  position: relative;
+}
+@keyframes float {
+  0% {
+    transform: translateX(-100%) rotate(0deg);
+    opacity: 0;
+  }
+  25% {
+    transform: translateX(0) rotate(90deg);
+    opacity: 1;
+  }
+  75% {
+    transform: translateX(200px) rotate(270deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-100%) rotate(360deg);
+    opacity: 0;
+  }
 }
 
-.item:hover .overlay {
-  opacity: 1;
+.floating-container {
+  position: absolute;
+  top: -100px;
+  right: 0px;
+  animation: float 8s infinite linear;
 }
 
-.description {
-  box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.2);
-  margin-left: 100px;
-  border-radius: 30px;
-  background: linear-gradient(30deg, whitesmoke, rgb(218, 218, 218), gainsboro);
-  width: 50%;
-  padding: 40px;
+.floating-image {
+  width: 540px;
+  height: 540px;
+}
+.experience {
+  position: absolute;
+  top: 25px;
+  left: 10px;
+  width: 35%;
+  height: 90%;
+  background-color: #1c3f60;
+  border: #3a72b2 15px solid;
+  border-radius: 50px;
+  z-index: -1;
+}
+.container {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   align-items: flex-start;
-  margin-bottom: 100px;
-  transform: translateY(20px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+  position: relative;
+  z-index: 1;
+  height: 100%;
 }
 
-.description.left {
-  margin-right: 200px;
-  align-items: flex-start;
-  text-align: left;
+.text-content {
+  margin-left: 20px;
+  margin-top: 40px;
+  height: 100%;
+  position: relative;
+}
+.rectangle-background {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #3a72b2;
+  border-top-right-radius: 50px;
+  z-index: -1;
 }
 
-.description.right {
-  margin-left: 580px;
-  align-items: flex-end;
-  text-align: right;
+.diamond-border-container {
+  position: absolute;
+  top: 0; 
+  right: 0; 
+  padding: 10px;
+  width: fit-content;
+  z-index: 2;
 }
 
-.description.visible {
-  opacity: 1;
-  transform: translateY(0);
-}
 
-.description h2 {
+.rectangle-background3 {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 50%; 
+  height: 70%; 
+  background-color: #1c3f60; 
+  border-top-left-radius: 50px; 
+  z-index: -1;
+}
+.diamond-border {
+  width: 200px;
+  height: 200px;
+  margin-right: 10px;
   margin-bottom: 10px;
 }
 
-.description p, .description ul {
-  margin-top: 10px;
-  max-width: 600px;
+.text-content h1 {
+  color: white;
+  font-size: 48px;
 }
 
-.title {
-  transition-delay: 0.3s;
+.about-me h2{
+  margin-bottom: 8px;
 }
 
-.paragraph {
-  transition-delay: 0.6s;
+.titoletto{
+  font-style: italic;
 }
 
-
-
-.fade-in {
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
+.istruzione {
+  margin-bottom: 1%;
+  width: 630px;
 }
 
-.fade-in.visible {
-  opacity: 1;
-  transform: translateY(0);
+.about-me p{
+  margin-bottom: 6px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
 }
 
-.title {
-  transition-delay: 0.3s;
+.ball-line {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+}
+.dates-line{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  margin-top: 5px;
+  left: -50px;
 }
 
-.paragraph {
-  transition-delay: 0.6s;
-}
-
-.footer{
-  background: #333;
-  color: #fff;
+.dates {
   text-align: center;
+  width: 20%;
+}
+
+.content {
+  margin-left: 60px;  
+  width: 100%;  
+  border-left: white 5px solid;
+  padding-left: 30px;
+}
+
+.ball {
+  position: absolute;
+  left: 50px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.line {
+  width: 2px;
+  height: 163px;  
+  background-color: white;
+}
+
+.about-me {
+  text-align: justify;
+  color: white;
+  margin-top: 100px;
+  height: 100%;
+  width: fit-content;
+}
+
+
+
+.rectangle-background2 {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 30%; 
+  height: 10%; 
+  background-color: #1c3f60; 
+  border-top-right-radius: 50px; 
+  border-bottom-right-radius: 50px; 
+  z-index: -1; 
+}
+
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
   padding: 20px;
-  bottom: 0;
-  box-sizing: border-box;
+  height: 500px;
+  width: 500px;
+  position: absolute;
+  right: 0;
+}
+
+.image-container {
+  position: relative;
+  display: flex;           
+  justify-content: center; 
+  align-items: center;     
+  flex-direction: column;
   width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.image-caption {
+  color: white;
+  align-self: center;
+  align-items: center;
+  text-align: center;
+}
+.grid-image {
+  width: 70px;
+  height: 70px;
+  padding: 10px;
+  border: #3a72b2 5px solid;
+  border-radius: 35px;
+  object-fit: contain;
+  filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(180deg);
 }
 
-.footer-container{
-  max-width: 1200px;
-  margin:  0 auto;
+.lavoro{
+  margin-top: 20px;
+  margin-left: 30px;
+  color: white;
 }
 
 
+.third-page {
+  position: relative;
+  background-color: #f3f6fa;
+  overflow: hidden;
+}
+.third-page h1{
+  color: white;
+  padding: 20px;
+  width: 30%;
+  font-size: 40px;
+  border-bottom-right-radius: 50px;
+  background-color:#1e4e8c;
+  z-index: 1;
+}
+.video-container {
+  position: absolute;
+  inset: 100px 0 0 0;
+  display: grid;
+  grid-template-columns: repeat(4, 280px);
+  grid-template-rows: repeat(2, 200px);
+  gap: 70px;
+  padding: 20px;
+  align-items: start;
+  justify-content: center;
+}
+.project-title {
+  position: absolute;
+  top: 0px;
+  left: -10px;
+  background-color: #215fb1;
+  color: white;
+  padding: 5px 15px;
+  z-index: 1;
+  border-radius: 4px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  font-size: 1rem;
+}
+.video-card {
+  background:#0756a199;
+  border: #3879cf solid 5px;
+  margin: 10px;
+  position: relative;
+  width: 280px; 
+  height: 180px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+
+.video-card:hover {
+  transform: scale(1.35);
+  height: fit-content;
+
+}
+
+.video-background {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.description {
+  position: relative; 
+  background: transparent;
+  color: white;
+  font-size: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  display: flex;
+  align-self: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.description a{
+  color: white;
+}
+.description.visible {
+  opacity: 1;
+}
+
+.description h3 {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+}
+
+
+.rectangles-container {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.rectangles-container2 {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  gap: 50px;
+  padding: 30px;
+  align-items: end;
+  justify-content: end;
+}
+.rectangle {
+  animation: fadeCycle 12s infinite ease-in-out;
+}
+
+.rectangle-1 {
+  width: 240px;
+  height: 180px;
+  background-color: #2b6cb0;
+}
+.footer-bar2 a {
+  text-decoration: underline;
+  color: dimgray;
+}
+.footer-bar2 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: end;
+  text-align: center;
+  color: dimgray;
+  width: 100%;
+  height: 12%;
+  padding: 8px;
+  background: linear-gradient(180deg, transparent, #f0f0f0, #f3f8ff);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.rectangle-2 {
+  width: 240px;
+  height: 180px;
+  transform: scale(0.8);
+  background-color: #3182ce;
+}
+
+.rectangle-3 {
+  width: 240px;
+  height: 180px;
+  transform: scale(0.4);
+  background-color: #1e4e8c;
+}
+
+.rectangle-4 {
+  width: 240px;
+  height: 180px;
+  transform: scale(0.5);
+  background-color: #63b3ed;
+}
+
+.rectangle-5 {
+  width: 240px;
+  height: 180px;
+  transform: scale(0.6);
+  background-color: #1a365d;
+}
+
+.rectangle-6 {
+  width: 240px;
+  height: 180px;
+  transform: scale(0.7);
+  background-color: #90cdf4;
+}
+
+@keyframes fadeCycle {
+  0%, 100% {
+    opacity: 1;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  50% {
+    opacity: 0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  }
+}
+.page-indicator {
+  position: fixed;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.indicator {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.indicator:hover {
+  background-color: white;
+  transform: scale(1.2);
+}
+
+.indicator.active {
+  background-color: white;
+  transform: scale(1.2);
+}
